# vampiria

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3  traces.4
data/: Makefile.am  Makefile.in  gnomeradio.1  gnomeradio.desktop.in  gnomeradio.gep  gnomeradio.schemas  org.gnome.gnomeradio.gschema.xml
data/icons/: Makefile.am  Makefile.in
data/icons/16x16/: Makefile.in
data/icons/22x22/: Makefile.in
data/icons/24x24/: Makefile.in
data/icons/32x32/: Makefile.in
data/icons/48x48/: Makefile.in
data/icons/scalable/: Makefile.in
data/pixmaps/: Makefile.am  Makefile.in
debian/: changelog  control  copyright  docs  gnomeradio.1  gnomeradio.install  gnomeradio.xpm  manpages  menu  rules  watch
debian/patches/: series
help/: Makefile.am  Makefile.in
help/C/: index.docbook
help/es/: es.po
help/fr/: fr.po
help/oc/: oc.po
help/sv/: sv.po
po/: LINGUAS  POTFILES.in  sk.po
src/: Makefile.am  Makefile.in  alsa_stream.c  alsa_stream.h  gnomeradio-dtd.gresource.xml  gui.c  gui.h  lirc.c  lirc.h  media_devices.c  media_devices.h  media_types.c  media_types.h  messages.c  messages.h  missing_plugins.c  missing_plugins.h  mixer.c  mixer.h  mixer_alsa.c  mixer_oss.c  prefs.c  prefs.h  radio.c  radio.h  rec_tech.c  rec_tech.h  record.c  record.h  trayicon.c  trayicon.h  utils.c  utils.h  v4l1.c  v4l1.h  v4l2.c  v4l2.h
src/resources/: gnomeradio.dtd
