ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

SUBDIRS = help data po src

EXTRA_DIST =			\
	intltool-update.in	\
	intltool-merge.in	\
	intltool-extract.in	\
	README			\
	README.lirc		\
	README.recording	\
	gnomeradio.spec.in	\
	gnomeradio.spec

CLEANFILES = gnomeradio.spec

DISTCLEANFILES =		\
	intltool-extract	\
	intltool-merge		\
	intltool-update
