@YELP_HELP_RULES@

HELP_ID = gnomeradio

HELP_FILES =				\
	index.docbook			\
	legal.xml

HELP_MEDIA =				\
	figures/freq-controls.png	\
	figures/misc-controls.png	\
	figures/presets-box.png		\
	figures/recording-general.png	\
	figures/recording-mp3.png	\
	figures/recording-wav.png	\
	figures/recording_status.png	\
	figures/settings-misc.png	\
	figures/settings-presets.png	\
	figures/status-window.png	\
	figures/volume-controls.png

HELP_LINGUAS = es fr oc sv
